--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -10,6 +10,7 @@ body {
     background-image: url('../../assets/LandingPage.png');
     background-size: 100% auto; /* Cover width, overflow height */
     font-family: Inter;
+    overflow-x: hidden;
     /* background-repeat: no-repeat; */
     /* Optional: to keep the background fixed while scrolling */
   } 
@@ -27,6 +28,19 @@ nav{
   
   /* margin-right: 11.7vw; */
 }
+.hamburger{
+  display: none;
+  cursor: pointer;
+}
+.bar{
+  display: block;
+  width: 10px;
+  height: 2px;
+  margin: 2.5px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: white;
+}
 .logo{
   width: 10%;
   height: auto;
@@ -39,8 +53,8 @@ nav{
 .nav-links div{
   color: white;
   font-size: 1em;
-  padding-left: 3%;
-  padding-right: 3%;
+  margin-left: 3%;
+  margin-right: 3%;
   cursor: pointer;
   padding-top: 3%;
 }
@@ -337,8 +351,9 @@ input::placeholder{
 }
 
 .footer div:nth-child(3) img{
-  padding-right: 5%;
+  margin-right: 5%;
   width: 5%;
+  margin-bottom: 5%;
   /* height: 92%; */
   cursor: pointer;
 }
@@ -427,10 +442,43 @@ input{
 }
 
 @media screen and (max-width: 500px) {
+
+ 
+
   .nav-links {
-    display: none;
+    position: fixed;
+    left: -100%;
+    top:70px;
+    gap: 0;
+    flex-direction: column;
+    background-color: black;
+    width: 100%;
+    text-align: center;
+    transition: 0.3s;
+  }
+  .test{
+    background-color: #EA2D53;
+  }
+
+  .hamburger{
+    display: block;
+  }
+  .hamburger.active .bar:nth-child(2){
+    opacity: 0;
   }
   
+  .hamburger.active .bar:nth-child(1){
+    transform: translateY(8px) rotate(45deg);
+  }
+  .hamburger.active .bar:nth-child(1){
+    transform: translateY(-8px) rotate(-45deg);
+  }
+  .nav-links div{
+    margin:16px 0;
+  }
+  .nav-links.active{
+    left: 0;
+  }
   .footer div:nth-child(4), .footer div:nth-child(5) {
     font-size: xx-small;
 }
@@ -440,23 +488,33 @@ input{
     margin-top: 10%;    
   }
   .first-section{
-    margin-left: 14%;
+    width: 86%;
+    margin: 10% 0px 0px 7%
   }
   .threephones{
-    width: 150%;
+    width: 144%;
   }
   .second-sub-parent{
     flex-direction: column;
     align-items: center;
   }
   .second-section{
-    width: 60%;
+    width: 80%;
     text-align: justify;
     align-items: center;
     margin-left: 20%;
   }
   .second-sub-section-2{
     margin:0;
+  }
+  .second-sub-section-1{
+    padding-left: 31%
+  }
+  
+  .second-sub-heading{
+    position: relative;
+    left: -20%;
+    
   }
   .third-sub-section-1{
     margin-top: 5%;
@@ -469,29 +527,34 @@ input{
     margin: 0;
     padding: 0;
   }
+  
   .third-sub-section-1 div:nth-child(2){
     margin-bottom: 5%;
-    font-size: 30px;
+    font-size: 40px;
   }
   .third-sub-section-2 img{
     width: 100%;
   }
   .third-sub-section-1 div:nth-child(1){
     
-    font-size: xx-small;
+    font-size: small;
+  }
+  .playstorebutton{
+    padding-left: 9%;
   }
 /*   
   input::placeholder,.entry-fields{
     font-size: 60%;
   } */
   .entry-fields div{
-    font-size: 5px;
+    font-size: 7px;
     border-radius: 1px;
   }
   .entry-fields{
-    font-size: 5px;
-    width: 34%;
+    font-size: 30px;
+    width: 46%;
   }
+
   .signup{
     font-size: 0.8em;  
   }
@@ -505,9 +568,10 @@ input{
   .entry-fields input{
     min-width: none;
     border-radius: 1px;
+    width: 25vw;
   }
   .first-sub-section div:nth-child(1){
-    font-size: 17px;
+    font-size: 30px;
     
   }
   .first-sub-section{
@@ -517,19 +581,22 @@ input{
   
   .second-section{
     border-radius: 20px;
+    margin-left: 10%;
   }
 
   .second-section-welcome{
-    font-size: 150%
+    font-size: 220%
   }
   .second-section-text{
-    font-size: 0.3em;
+    font-size: 0.5em;
   }
   .second-sub-heading{
-    font-size: 50%;
+    font-size: 70%;
   }
   .red-list{
-    font-size: 0.1em;
+    font-size: 0.5em;
+    position: relative;
+    left:-5%;
   }
   .footer-span{
     font-size: xx-small;
@@ -538,5 +605,90 @@ input{
     position: relative;
     bottom: -10%;
   }
+  .third-sub-section-2 img{
+    width: 135%;
+   /* height: 90%; */
+   /* position: relative;
+   top: 7%; */
+   /* right: 10%; */
+}
+.footer{
+  margin-bottom: 10%;
+}
+.logo{
+  width: 20%;
+}
+.footer div:nth-child(3){
+  width: 81vw;
+  display: flex;
+  justify-content: center;
+  margin-top: 3%;
+  position: relative;
+  top: 2%;
+  margin-left: 4%;
+  margin-bottom: 4%;
+}
 }
 
+.burger-container {
+  display: none;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: end;
+}
+
+.burger-menu {
+  cursor: pointer;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: end; 
+    /* background-color: #181818; */
+}
+
+.burger-menu div {
+  width: 25px;
+  height: 3px;
+  background-color: #ffffff;
+  margin: 2.5px 0;
+  transition: 0.4s;
+
+}
+
+.navbar {
+  display: none;
+  flex-direction: column;
+  align-items: start;
+  background-color: #181818;
+  padding: 15px;
+  text-align: center;
+  color: #fff;
+}
+
+.navbar a {
+  color: #fff;
+  text-decoration: none;
+  padding: 15px;
+  display: inline-block;
+}
+
+.burger-container.open .navbar , .burger-menu.open {
+  display: flex;
+  background-color: #181818;
+}
+
+
+
+
+@media screen and (max-width: 500px) {
+
+  .burger-container {
+    display: block;
+    position:fixed;
+    
+    right: 0;
+    top: 0;
+    z-index: 1;
+  } 
+ }
