--- a/src/pages/Downloads/Home.css
+++ b/src/pages/Downloads/Home.css
@@ -16,8 +16,47 @@ body {
   /* background-repeat: no-repeat; */
   /* Optional: to keep the background fixed while scrolling */
 }
-body::-webkit-scrollbar{
-  display: none;
+
+.downloads-section{
+  border-radius: 40px;
+  background: rgba(255, 255, 255, 0.05);
+  box-shadow: 0px 4px 130px 0px rgba(0, 0, 0, 0.43);
+  backdrop-filter: blur(40px);
+  text-align: center;
+  padding: 3%;
+  width: 45%;
+  position: relative;
+  left: 22%;
+  /* padding-right: 10%; */
+  margin-top: 5%;
+  margin-bottom: 10%;
+  padding: 3% 6%
+}
+
+.downloads-section div:nth-child(1){
+  color: white;
+  margin: 2% 0;
+  font-size: 200%;
+  font-weight: 600;
+}
+.appstorebutton{
+  width: 30%;
+  position: relative;
+  bottom: 11.5px;
+  margin: 5% 0;
+}
+
+.appstorebutton2{
+  width: 30%;
+  margin: 5% 0;
+
+}
+
+.downloads-section div:nth-child(2){
+  color: white;
+  margin: 3% 0;
+  font-size: 100%;
+  font-weight: 400;
 }
 
 nav {
@@ -780,3 +819,7 @@ input {
     z-index: 1;
   }
 }
+
+.redfont{
+  color: #EA2D53;
+} 
